# cube

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  LICENSE.md  README.md  main.cpp  readme.md
assets/: .manifest
assets/data/: atlas.txt  blocks
assets/fonts/: info.txt
assets/shaders/: block.frag  block.vert  canvas.frag  canvas.vert  celestial.frag  celestial.vert  cube.frag  cube.vert  render2d_frag.glsl  render2d_vert.glsl  render3d_frag.glsl  render3d_vert.glsl  voxel.frag  voxel.vert
cmake/: assets_dir.hpp.in
cube/: Cube.cpp  Cube.hpp  main.cpp
cube/core/: IEngine.hpp  IEntity.hpp  ILayout.hpp  IManager.hpp  IObject.hpp  IRenderer.hpp  IScreen.hpp  IWidget.hpp
cube/data/: Block.cpp  Block.hpp  Chunk.cpp  Chunk.hpp  World.cpp  World.hpp
cube/engine/: Engine.cpp  Engine.hpp  ScreenManager.cpp  ScreenManager.hpp
cube/entity/: Player.cpp
cube/game/: Cube.cpp  Cube.h  Cube.hpp  Generator.cpp  Generator.hpp  ScreenManager.cpp  ScreenManager.hpp
cube/game/models/: Block.cpp  Block.h  Chunk.cpp  Chunk.h
cube/game/render/: ChunkMesh.cpp  ChunkMesh.hpp  ChunkObject.cpp  ChunkObject.hpp  ChunkRenderer.cpp  ChunkRenderer.hpp  ChunkVertex.hpp
cube/graphics/: ChunkRenderer.cpp  ChunkRenderer.hpp  Color.cpp  Color.hpp  Context.cpp  Context.hpp  Font.cpp  Font.hpp  FontStyle.h  Mesh.cpp  Mesh.hpp  Renderer2D.cpp  Renderer2D.hpp  Renderer3D.cpp  Renderer3D.hpp  RendererState.cpp  RendererState.hpp  RendererUI.cpp  RendererUI.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  TextureArray.cpp  TextureArray.hpp  TextureBuilder.cpp  TextureBuilder.hpp  TextureParams.hpp  Window.cpp  Window.hpp  WorldRenderer.cpp  WorldRenderer.hpp
cube/model/: Block.hpp  Chunk.cpp  Chunk.hpp
cube/model/primitive/: Camera.cpp  Camera.hpp
cube/models/: Camera.cpp  Camera.hpp  Player.hpp
cube/models/world/: Block.cpp  Block.hpp  Chunk.cpp  Chunk.hpp  World.cpp  World.hpp
cube/ui/: LayoutParams.cpp  LayoutParams.hpp  Rect.cpp  Rect.hpp
cube/ui/layout/: Column.cpp  Column.hpp  Row.cpp  Row.hpp
cube/utils/: Assets.cpp  Assets.hpp  AssetsPaths.hpp  LambdaVisitor.hpp  ThreadPool.cpp  ThreadPool.h  ThreadPool.hpp
cube/window/: Event.cpp  Event.hpp  Key.cpp  Key.hpp  Window.cpp  Window.hpp
include/cube/: Cube.hpp  Window.hpp
libs/FastNoise2/: CMakeLists.txt
libs/FastNoiseLite/: CMakeLists.txt
libs/Polyline2D/: CMakeLists.txt
libs/glad/: CMakeLists.txt
libs/glad/src/: glad.c
libs/stb/: CMakeLists.txt
libs/thread_pool/: CMakeLists.txt
src/: Cube.cpp  Window.cpp  main.cpp
src/cube/: Cube.cpp
src/entities/: Player.cpp
src/game/: cube.cpp
src/generators/: GeneratorFlat.cpp  GeneratorHeight.cpp  GeneratorTerrain.cpp  generator_flat.cpp
src/graphics/: Camera.cpp  ChunkRenderer.cpp  Font.cpp  FrustumCulling.cpp  Mesh.cpp  Mesher.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  TextureAtlas.cpp  Vertex.cpp  VoxelItem.cpp  VoxelRenderer.cpp  font.cpp  shader.cpp  texture.cpp
src/models/: Block.cpp
src/render/: camera.cpp
src/screens/: Game.cpp  Main.cpp
src/utils/: AssetsUtils.cpp  ColorUtils.cpp  FNoise.cpp  ThreadPool.cpp  Utils.cpp  utils.cpp
src/world/: Chunk.cpp  World.cpp  chunk.cpp  world.cpp
(+123 files in other folders)
